# koj

./: .gitignore  .gitmodules  backend.Dockerfile  build.gradle.kts  docker-compose.yml  gradle.properties  init.bat  init.sh  settings.gradle.kts
.github/workflows/: backend.yml
.migrate/: init.sql
backend/koj-backend-server/: build.gradle.kts
backend/koj-cryptor/: build.gradle.kts
backend/koj-dao/: build.gradle.kts
backend/koj-dao-codegen/: build.gradle.kts
backend/koj-uid/: build.gradle.kts
buildSrc/: build.gradle.kts
common/koj-common/: build.gradle.kts
common/koj-stub/: build.gradle.kts
frontend/: .eslintrc.js  .gitattributes  .gitignore  .prettierrc  components.d.ts  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.js
frontend/src/: App.vue  main.ts
koj-native/: .gitignore  CMakeLists.txt  Dockerfile  docker-build.sh
koj-native/demo/: Main.kt  docker-compose.yml  main.cc
koj-native/dockerfiles/: clike.Dockerfile  docker-build.sh  jvm11.Dockerfile  jvm17.Dockerfile  jvm8.Dockerfile  py310.Dockerfile  py36.Dockerfile  py38.Dockerfile  runtime.Dockerfile
koj-native/dockerfiles/cc-src/: CMakeLists.txt
koj-native/dockerfiles/cc-src/include/: child.h  defined.h
koj-native/dockerfiles/cc-src/src/: child.cc  defined.cc  logger.cc  main.cc
koj-native/include/: child.h  defined.h  logger.h  processor_killer.h
koj-native/policy/: java.policy
koj-native/src/: child.cc  defined.cc  logger.cc  main.cc  process_killer.cc
koj-sandbox/tools/: generateJniHeaders.py
sandbox/koj-core/: build.gradle.kts
(+314 files in other folders)
